# stock-analysis

./: .gitignore  LICENSE  Procfile  README.md  index.md  requirements.txt  setup.cfg  streamlit_app.py
.github/workflows/: daily_cronjobs.yml  idx_latest_release_date.yml  main.yml  scrape_stockbit.yml  scrape_stockbit_statement_release_date.yml  scrape_tradingview.yml  scrape_tradingview_data.yml  send_email_notification.yml
.streamlit/: config.toml
MyDashApp/: README.md  requirements.txt
MyDashApp/src/: __init__.py  app.py
dash_app/: app.py
src/stock_analysis/: combine_with_stockbit.py  dashboard.py  google_drive_api.py  html_template.html  idnfinancials_data_downloader.py  idx_latest_release_date.py  pahamsaham_visualization.py  send_email_notification.py  stock_visualization.py  stockbit_data_scraper.py  stockbit_report_date_scraper.py  styles.css  tradingview_data_scraper.py  tradingview_fundamental_data_scraper.py  utils.py
src/stock_analysis/backtest_strategy/: calculate_backtest.py  calculate_backtest_-1+1stdev.py  calculate_backtest_-1+2stdev.py  calculate_backtest_-2+1stdev.py  calculate_backtest_-2+2stdev.py  calculate_backtest_all.py  calculate_backtest_async.py.py  idx_30_backtest.json  idx_30_backtest_20230404.json  idx_30_backtest_20230404_-1+1stdev.json  idx_30_backtest_20230404_-2+1stdev.json  plot_annual_profit.py  plot_buy_sell.py  plot_comp_profit.py
src/stock_analysis/backtest_strategy/multiples_momentum/: multiples_momentum_yearly.json  multiples_momentum_yearly.py  multiples_momentum_yearly_transactions.py
src/stock_analysis/pahamsaham/: input_piechart.xlsx  pahamsaham_visualization.py
src/stock_analysis/static/: 20230402_stocks_list.csv  20230402_stocks_list_LQ45.csv  20230416_stocks_list_IDX30.csv  20230416_stocks_list_IDX80.csv  20230416_stocks_list_IDXHIDIV20.csv  20230416_stocks_list_LQ45.csv
src/stock_analysis/stockbit/: LQ_45_stocks_list_scraper.py  stockbit_data_scraper.py  stockbit_data_scraper_1.py  stockbit_data_scraper_2.py  stockbit_data_scraper_3.py  stockbit_data_scraper_3year_cagr.py  stockbit_data_scraper_4.py  stockbit_data_scraper_5.py  stockbit_data_scraper_6.py  stockbit_data_scraper_7.py  stockbit_data_scraper_annual_yoy_growth.py  stockbit_data_scraper_qoq_growth.py  stockbit_data_scraper_qoq_yoy_growth.py  stockbit_data_scraper_quarterly.py  stockbit_data_scraper_ttm.py  stockbit_data_scraper_yearly.py  stockbit_data_scraper_ytd.py  stockbit_data_scraper_ytd_yoy_growth.py  stockbit_statement_release_date_scraper.py  stockbit_statement_release_date_scraper_1.py  stockbit_statement_release_date_scraper_2.py  stockbit_statement_release_date_scraper_3.py  stockbit_statement_release_date_scraper_4.py  stockbit_statement_release_date_scraper_5.py  stockbit_statement_release_date_scraper_6.py  stockbit_statement_release_date_scraper_7.py
src/stock_analysis/streamlit/: streamlit_app.py
src/tradingview_scraper/: fundamental_analysis_scraper.py  fundamental_data_scraper.py
(+3 files in other folders)
