[metadata]
name = tradingview_scraper
version = 0.1.0
author = Ryan Alvita
author_email = ryanalvita@gmail.com
url = https://github.com/ryanalvita/tradingview-scraper
description = A repository to scrape data from Trading View website
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stocks, fundamental analysis, setuptools
license = MIT License
classifiers =
    MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
package_dir=
    =src
zip_safe = True
install_requires =
    numpy
    pandas
    selenium
    webdriver_manager
    alive_progress

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    run_fundamental_data_scraper = tradingview_scraper.fundamental_data_scraper:main