[metadata]
name = stock_analysis
version = 0.1.0
author = Ryan Alvita
author_email = ryanalvita@gmail.com
url = https://github.com/ryanalvita/stock_analysis
description = A repository to analyze stocks, including stock data scraper, stock data analysis, and stocks dashboard
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stocks, fundamental analysis, setuptools
license = MIT License
classifiers =
    MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
package_dir=
    =src
zip_safe = True
install_requires =
    numpy
    pandas
    selenium
    webdriver_manager
    alive_progress
    lxml
    openpyxl
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    run_tradingview_fundamental_data_scraper = stock_analysis.tradingview_fundamental_data_scraper:main