[metadata]
name = stock_analysis
version = 0.1.0
author = Ryan Alvita
author_email = ryanalvita@gmail.com
url = https://github.com/ryanalvita/stock_analysis
description = A repository to analyze stocks, including stock data scraper, stock data analysis, and stocks dashboard
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stocks, fundamental analysis, setuptools
license = MIT License
classifiers =
    MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
package_dir=
    =src
zip_safe = True
install_requires =
    black
    numpy
    pandas
    selenium
    webdriver_manager
    alive_progress
    lxml
    openpyxl
    pymongo
    dnspython
    fake_useragent

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    run_stockbit_data_scraper = stock_analysis.stockbit_data_scraper:main
    run_tradingview_data_scraper = stock_analysis.tradingview_data_scraper:main
    run_idnfinancials_data_downloader = stock_analysis.run_idnfinancials_data_downloader:main